[gd_scene load_steps=3 format=3 uid="uid://dye8ygfcvmig0"]

[ext_resource type="Script" path="res://assets/scripts/new_menu.gd" id="1_0jmf4"]
[ext_resource type="Texture2D" uid="uid://bc1domrl5u1nj" path="res://assets/puzzles/AdobeStock_104619688.jpeg" id="2_ae42l"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0jmf4")

[node name="background texture" type="Sprite2D" parent="."]
position = Vector2(1012, 675)
scale = Vector2(0.388011, 0.380041)
texture = ExtResource("2_ae42l")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 356.0
offset_top = 278.0
offset_right = 1578.0
offset_bottom = 998.0

[node name="title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Jigsaw Game"
horizontal_alignment = 1

[node name="start random" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Start Random Game"

[node name="select puzzle" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Select Puzzle"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Quit Game"

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="pressed" from="VBoxContainer/start random" to="." method="_on_start_random_pressed"]
[connection signal="pressed" from="VBoxContainer/select puzzle" to="." method="_on_select_puzzle_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
